--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".OlvidoContrasena" />
         <activity android:name=".Registro" />
         <activity android:name=".Viaje3" />
-        <activity android:name=".Actividad2"></activity>
+        <activity android:name=".Actividad2" />
     </application>
 
 </manifest>
