logica de navegacion entre mis viajes,seleccionar opcion de trip,Empezar trip,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".Registro" />
         <activity android:name=".Viaje3" />
         <activity android:name=".Actividad2" />
+        <activity android:name=".Actividad" />
+        <activity android:name=".Viaje" />
+        <activity android:name=".Viaje2" />
     </application>
 
 </manifest>
